--- a/analysis/stats_from_storyline.html
+++ b/analysis/stats_from_storyline.html
@@ -11785,7 +11785,7 @@ div#notebook {
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[35]:</div>
+<div class="prompt input_prompt">In&nbsp;[6]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-r"><pre><span></span><span class="kn">require</span><span class="p">(</span>ggplot2<span class="p">)</span>
@@ -11814,7 +11814,7 @@ div#notebook {
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[36]:</div>
+<div class="prompt input_prompt">In&nbsp;[7]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-r"><pre><span></span>mydata <span class="o">&lt;-</span> read.csv<span class="p">(</span><span class="s">&quot;C:\\Users\\Sarah\\Documents\\Personal Content\\Lab_study_data\\all_massaged_data\\dataframe_all_factors_for_analysis.txt&quot;</span><span class="p">,</span>sep <span class="o">=</span> <span class="s">&#39;\t&#39;</span><span class="p">)</span>
@@ -11836,7 +11836,7 @@ mydata<span class="o">$</span>CVS_table <span class="o">&lt;-</span> <span class
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[37]:</div>
+<div class="prompt input_prompt">In&nbsp;[8]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-r"><pre><span></span><span class="kp">head</span><span class="p">(</span>mydata<span class="p">)</span>
@@ -11966,7 +11966,7 @@ mydata<span class="o">$</span>CVS_table <span class="o">&lt;-</span> <span class
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[38]:</div>
+<div class="prompt input_prompt">In&nbsp;[9]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-r"><pre><span></span>am1 <span class="o">&lt;-</span> aov<span class="p">(</span>main
@@ -12048,7 +12048,7 @@ Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[39]:</div>
+<div class="prompt input_prompt">In&nbsp;[10]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-r"><pre><span></span>am2 <span class="o">&lt;-</span> aov<span class="p">(</span>quant_score
@@ -12127,22 +12127,21 @@ Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&
 </div>
 </div>
 </div>
-<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
-</div>
-<div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<p>We need to use GEE (generalized estimating equations) for our logistical model with repeated measures.</p>
-<p><strong>coming soon!</strong></p>
-
-</div>
-</div>
-</div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[40]:</div>
+<div class="prompt input_prompt">In&nbsp;[12]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-r"><pre><span></span><span class="kp">load</span><span class="p">(</span>gee<span class="p">)</span>
+<div class=" highlight hl-r"><pre><span></span><span class="c1"># mydata$variable &lt;- relevel(mydata$variable, &quot;Width&quot;)</span>
+mixed <span class="o">&lt;-</span> glmer<span class="p">(</span>
+    cvs_table
+    <span class="o">~</span> variable <span class="o">+</span> sim_index <span class="o">+</span> pre
+    <span class="o">+</span> lab_experience <span class="o">+</span> similar_sim <span class="o">+</span> prior_number_virtual_labs <span class="o">+</span> overall.POCC
+    <span class="o">+</span>  PC1 <span class="o">+</span> PC2 <span class="o">+</span> <span class="p">(</span><span class="m">1</span> <span class="o">|</span> sid<span class="p">),</span>
+           data <span class="o">=</span> mydata<span class="p">,</span> family <span class="o">=</span> binomial<span class="p">,</span> 
+           control <span class="o">=</span> glmerControl<span class="p">(</span>optimizer <span class="o">=</span> <span class="s">&quot;bobyqa&quot;</span><span class="p">),</span> nAGQ <span class="o">=</span> <span class="m">10</span><span class="p">)</span>
+
+<span class="kp">summary</span><span class="p">(</span>mixed<span class="p">)</span>
 </pre></div>
 
 </div>
@@ -12158,13 +12157,74 @@ Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&
 <div class="prompt"></div>
 
 
-<div class="output_subarea output_text output_error">
-<pre>
-Error in load(gee): object &#39;gee&#39; not found
-Traceback:
 
-1. load(gee)</pre>
+
+<div class="output_text output_subarea ">
+<pre>Generalized linear mixed model fit by maximum likelihood (Adaptive
+  Gauss-Hermite Quadrature, nAGQ = 10) [glmerMod]
+ Family: binomial  ( logit )
+Formula: 
+cvs_table ~ variable + sim_index + pre + lab_experience + similar_sim +  
+    prior_number_virtual_labs + overall.POCC + PC1 + PC2 + (1 |      sid)
+   Data: mydata
+Control: glmerControl(optimizer = &#34;bobyqa&#34;)
+
+     AIC      BIC   logLik deviance df.resid 
+   636.9    693.8   -305.4    610.9      575 
+
+Scaled residuals: 
+    Min      1Q  Median      3Q     Max 
+-2.7511 -0.4307  0.2088  0.3572  2.3885 
+
+Random effects:
+ Groups Name        Variance Std.Dev.
+ sid    (Intercept) 5.991    2.448   
+Number of obs: 588, groups:  sid, 147
+
+Fixed effects:
+                          Estimate Std. Error z value Pr(&gt;|z|)   
+(Intercept)               -1.20670    1.87139  -0.645  0.51905   
+variableConcentration      0.53139    0.36369   1.461  0.14399   
+variableSeparation        -0.25492    0.33945  -0.751  0.45267   
+variableWidth              0.27038    0.36037   0.750  0.45309   
+sim_index2                 0.58583    0.24912   2.352  0.01869 * 
+pre                        0.74207    0.25651   2.893  0.00382 **
+lab_experience1            3.19499    0.97581   3.274  0.00106 **
+similar_sim1               0.06512    0.38839   0.168  0.86685   
+prior_number_virtual_labs -0.20854    0.31117  -0.670  0.50275   
+overall.POCC              -0.08198    0.12046  -0.681  0.49616   
+PC1                        0.39246    0.24013   1.634  0.10218   
+PC2                        0.65777    0.29740   2.212  0.02699 * 
+---
+Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1
+
+Correlation of Fixed Effects:
+            (Intr) vrblCn vrblSp vrblWd sm_nd2 pre    lb_xp1 smlr_1 prr___
+vrblCncntrt -0.108                                                        
+variblSprtn -0.086  0.465                                                 
+variablWdth -0.103  0.545  0.470                                          
+sim_index2  -0.077  0.029 -0.019  0.019                                   
+pre         -0.026  0.001 -0.039  0.064  0.035                            
+lab_exprnc1 -0.335  0.054 -0.012  0.038  0.059  0.074                     
+similar_sm1  0.024 -0.292 -0.012 -0.295  0.116  0.107 -0.047              
+prr_nmbr_v_ -0.015  0.033  0.004  0.029 -0.033 -0.082 -0.447 -0.135       
+overll.POCC -0.884 -0.007  0.002 -0.007 -0.011 -0.042  0.001  0.004 -0.079
+PC1          0.423  0.015 -0.010  0.004  0.021  0.017  0.076  0.001 -0.147
+PC2          0.276  0.025 -0.012  0.012  0.048  0.035  0.136  0.017 -0.077
+            o.POCC PC1   
+vrblCncntrt              
+variblSprtn              
+variablWdth              
+sim_index2               
+pre                      
+lab_exprnc1              
+similar_sm1              
+prr_nmbr_v_              
+overll.POCC              
+PC1         -0.450       
+PC2         -0.344  0.207</pre>
 </div>
+
 </div>
 
 </div>
@@ -12173,32 +12233,103 @@ Traceback:
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
+<div class="prompt input_prompt">In&nbsp;[14]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-r"><pre><span></span>gm1 <span class="o">&lt;-</span> gee<span class="p">(</span>cvs_table <span class="o">~</span> variable <span class="o">+</span> sim_index <span class="o">+</span> pre
+<div class=" highlight hl-r"><pre><span></span>mixed <span class="o">&lt;-</span> glmer<span class="p">(</span>
+    cvs_graph
+    <span class="o">~</span> variable <span class="o">+</span> sim_index <span class="o">+</span> pre
     <span class="o">+</span> lab_experience <span class="o">+</span> similar_sim <span class="o">+</span> prior_number_virtual_labs <span class="o">+</span> overall.POCC
-    <span class="o">+</span>  PC1 <span class="o">+</span> PC2<span class="p">,</span> id<span class="o">=</span>sid<span class="p">,</span> data<span class="o">=</span>mydata<span class="p">)</span>
-<span class="kp">summary</span><span class="p">(</span>gm1<span class="p">)</span>
+    <span class="o">+</span>  PC1 <span class="o">+</span> PC2 <span class="o">+</span> <span class="p">(</span><span class="m">1</span> <span class="o">|</span> sid<span class="p">),</span>
+           data <span class="o">=</span> mydata<span class="p">,</span> family <span class="o">=</span> binomial<span class="p">,</span> 
+           control <span class="o">=</span> glmerControl<span class="p">(</span>optimizer <span class="o">=</span> <span class="s">&quot;bobyqa&quot;</span><span class="p">),</span> nAGQ <span class="o">=</span> <span class="m">10</span><span class="p">)</span>
+
+<span class="kp">summary</span><span class="p">(</span>mixed<span class="p">)</span>
 </pre></div>
 
 </div>
 </div>
 </div>
 
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area">
+
+<div class="prompt"></div>
+
+
+
+
+<div class="output_text output_subarea ">
+<pre>Generalized linear mixed model fit by maximum likelihood (Adaptive
+  Gauss-Hermite Quadrature, nAGQ = 10) [glmerMod]
+ Family: binomial  ( logit )
+Formula: 
+cvs_graph ~ variable + sim_index + pre + lab_experience + similar_sim +  
+    prior_number_virtual_labs + overall.POCC + PC1 + PC2 + (1 |      sid)
+   Data: mydata
+Control: glmerControl(optimizer = &#34;bobyqa&#34;)
+
+     AIC      BIC   logLik deviance df.resid 
+   605.7    662.6   -289.9    579.7      575 
+
+Scaled residuals: 
+    Min      1Q  Median      3Q     Max 
+-2.0994 -0.3173 -0.1006  0.3446  2.8043 
+
+Random effects:
+ Groups Name        Variance Std.Dev.
+ sid    (Intercept) 10.38    3.222   
+Number of obs: 588, groups:  sid, 147
+
+Fixed effects:
+                          Estimate Std. Error z value Pr(&gt;|z|)    
+(Intercept)                -6.0676     2.3957  -2.533  0.01132 *  
+variableConcentration       0.7346     0.4053   1.812  0.06994 .  
+variableSeparation         -0.1027     0.3733  -0.275  0.78319    
+variableWidth               0.2719     0.3991   0.681  0.49573    
+sim_index2                  1.2961     0.2909   4.455 8.38e-06 ***
+pre                         0.4933     0.2634   1.873  0.06111 .  
+lab_experience1             4.0788     1.3884   2.938  0.00331 ** 
+similar_sim1               -0.1448     0.4373  -0.331  0.74054    
+prior_number_virtual_labs   0.2377     0.3908   0.608  0.54308    
+overall.POCC                0.0331     0.1476   0.224  0.82252    
+PC1                         0.1045     0.3008   0.347  0.72836    
+PC2                         0.6465     0.3676   1.759  0.07863 .  
+---
+Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1
+
+Correlation of Fixed Effects:
+            (Intr) vrblCn vrblSp vrblWd sm_nd2 pre    lb_xp1 smlr_1 prr___
+vrblCncntrt -0.131                                                        
+variblSprtn -0.072  0.467                                                 
+variablWdth -0.107  0.572  0.472                                          
+sim_index2  -0.151  0.147 -0.009  0.111                                   
+pre         -0.018 -0.084 -0.051 -0.002  0.056                            
+lab_exprnc1 -0.424  0.078 -0.004  0.049  0.120  0.046                     
+similar_sm1  0.043 -0.305 -0.012 -0.294  0.040  0.131 -0.051              
+prr_nmbr_v_ -0.024  0.037  0.001  0.027  0.005 -0.067 -0.386 -0.138       
+overll.POCC -0.835 -0.001 -0.002 -0.007  0.004 -0.042 -0.014 -0.004 -0.074
+PC1          0.381  0.010 -0.003  0.003  0.013 -0.001  0.056  0.002 -0.129
+PC2          0.198  0.036 -0.006  0.021  0.077  0.024  0.105 -0.009 -0.023
+            o.POCC PC1   
+vrblCncntrt              
+variblSprtn              
+variablWdth              
+sim_index2               
+pre                      
+lab_exprnc1              
+similar_sm1              
+prr_nmbr_v_              
+overll.POCC              
+PC1         -0.432       
+PC2         -0.296  0.170</pre>
 </div>
-<div class="cell border-box-sizing code_cell rendered">
-<div class="input">
-<div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
-<div class="inner_cell">
-    <div class="input_area">
-<div class=" highlight hl-r"><pre><span></span>gm2 <span class="o">&lt;-</span> gee<span class="p">(</span>cvs_graph <span class="o">~</span> variable <span class="o">+</span> sim_index <span class="o">+</span> pre
-    <span class="o">+</span> lab_experience <span class="o">+</span> similar_sim <span class="o">+</span> prior_number_virtual_labs <span class="o">+</span> overall.POCC
-    <span class="o">+</span>  PC1 <span class="o">+</span> PC2<span class="p">,</span> id<span class="o">=</span>sid<span class="p">,</span> data<span class="o">=</span>mydata<span class="p">)</span>
-<span class="kp">summary</span><span class="p">(</span>gm2<span class="p">)</span>
-</pre></div>
 
 </div>
+
 </div>
 </div>
 
