--- a/analysis/storyline_journal_paper.html
+++ b/analysis/storyline_journal_paper.html
@@ -11800,6 +11800,25 @@ div#notebook {
 </div>
 </div>
 
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area">
+
+<div class="prompt"></div>
+
+
+
+<div class="output_html rendered_html output_subarea ">
+<script>jQuery(function() {if (jQuery("body.notebook_app").length == 0) { jQuery(".input_area").toggle(); jQuery(".prompt").toggle();}});</script>
+</div>
+
+</div>
+
+</div>
+</div>
+
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
@@ -14321,7 +14340,7 @@ RERERNKIwpmIiIhIGvkJTP16MeG15loAAAAASUVORK5CYII=
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.text.Text at 0xfb217b8&gt;</pre>
+<pre>&lt;matplotlib.text.Text at 0xfb327b8&gt;</pre>
 </div>
 
 </div>
@@ -14948,7 +14967,7 @@ rkJggg==
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.text.Text at 0x1067aa20&gt;</pre>
+<pre>&lt;matplotlib.text.Text at 0x10678a20&gt;</pre>
 </div>
 
 </div>
@@ -15600,7 +15619,7 @@ wLYotQAAAAAA2/p/0aq8UaXj2KAAAAAASUVORK5CYII=
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.text.Text at 0x11ae64e0&gt;</pre>
+<pre>&lt;matplotlib.text.Text at 0x11b334e0&gt;</pre>
 </div>
 
 </div>
@@ -16268,7 +16287,7 @@ HuTCaEQEAAAAwIgIAAAAgBERAAAAACMiAAAAAEYCVXjNGzxiZAkAAAAASUVORK5CYII=
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.text.Text at 0x12dba438&gt;</pre>
+<pre>&lt;matplotlib.text.Text at 0x12ba2438&gt;</pre>
 </div>
 
 </div>
@@ -16627,7 +16646,7 @@ kiRJCmRQSZIkBTKoJEmSAj0Bpirl3vwbXQkAAAAASUVORK5CYII=
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.text.Text at 0x12f70470&gt;</pre>
+<pre>&lt;matplotlib.text.Text at 0x12da3470&gt;</pre>
 </div>
 
 </div>
@@ -16987,7 +17006,7 @@ rkJggg==
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.text.Text at 0x13396e10&gt;</pre>
+<pre>&lt;matplotlib.text.Text at 0x131b7e10&gt;</pre>
 </div>
 
 </div>
@@ -17347,7 +17366,7 @@ RU5ErkJggg==
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.text.Text at 0x13492208&gt;</pre>
+<pre>&lt;matplotlib.text.Text at 0x1340f208&gt;</pre>
 </div>
 
 </div>
@@ -17708,7 +17727,7 @@ y0gDYogAAAAASUVORK5CYII=
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.text.Text at 0x1391d358&gt;</pre>
+<pre>&lt;matplotlib.text.Text at 0x1372b358&gt;</pre>
 </div>
 
 </div>
@@ -18050,7 +18069,7 @@ LSIiYkEKaBEREQv6P9I7kOJF6lXQAAAAAElFTkSuQmCC
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.text.Text at 0x13b8bef0&gt;</pre>
+<pre>&lt;matplotlib.text.Text at 0x13d24ef0&gt;</pre>
 </div>
 
 </div>
@@ -18377,7 +18396,7 @@ iGTA0EVEREQkA4YuIiIiIhkwdBERERHJgKGLiIiISAb/D2XdJ5yurZ10AAAAAElFTkSuQmCC
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[43]:</div>
+<div class="prompt input_prompt">In&nbsp;[48]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span></span><span class="n">fig</span><span class="p">,</span><span class="n">ax</span> <span class="o">=</span> <span class="n">plt</span><span class="o">.</span><span class="n">subplots</span><span class="p">(</span><span class="n">nrows</span><span class="o">=</span><span class="mi">1</span><span class="p">,</span><span class="n">ncols</span><span class="o">=</span><span class="mi">1</span><span class="p">)</span>
@@ -18400,13 +18419,13 @@ iGTA0EVEREQkA4YuIiIiIhkwdBERERHJgKGLiIiISAb/D2XdJ5yurZ10AAAAAElFTkSuQmCC
 
 <div class="output_area">
 
-<div class="prompt output_prompt">Out[43]:</div>
+<div class="prompt output_prompt">Out[48]:</div>
 
 
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.text.Text at 0x13cbefd0&gt;</pre>
+<pre>&lt;matplotlib.text.Text at 0x14a8ad68&gt;</pre>
 </div>
 
 </div>
@@ -18698,7 +18717,7 @@ A/uzUWXmuv9UAAAAAElFTkSuQmCC
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.text.Text at 0x1404cb70&gt;</pre>
+<pre>&lt;matplotlib.text.Text at 0x1418eb70&gt;</pre>
 </div>
 
 </div>
@@ -18978,7 +18997,7 @@ iIhIkRhwRESkSP8HPtPjrE2eDxwAAAAASUVORK5CYII=
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.text.Text at 0x14295908&gt;</pre>
+<pre>&lt;matplotlib.text.Text at 0x143ad908&gt;</pre>
 </div>
 
 </div>
@@ -19244,7 +19263,7 @@ HBERqRIDjoiIVOn/A0z/pDX+VSrfAAAAAElFTkSuQmCC
 <span class="c1"># ax.legend([&#39;incorrect&#39;,&#39;qual&#39;,&#39;quant&#39;])</span>
 <span class="c1"># bars = [rect for rect in ax.get_children() if isinstance(rect, matplotlib.patches.Rectangle)]</span>
 <span class="c1"># bars[3].set_color(CMAP[2])</span>
-<span class="n">plt</span><span class="o">.</span><span class="n">suptitle</span><span class="p">(</span><span class="s1">&#39;Number of student who did cvs_table depending on sim_index&#39;</span><span class="p">)</span>
+<span class="c1"># plt.suptitle(&#39;Number of student who did cvs_table depending on sim_index&#39;)</span>
 </pre></div>
 
 </div>
@@ -19263,7 +19282,7 @@ HBERqRIDjoiIVOn/A0z/pDX+VSrfAAAAAElFTkSuQmCC
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.text.Text at 0x1451a0f0&gt;</pre>
+<pre>&lt;matplotlib.text.Text at 0x11a42dd8&gt;</pre>
 </div>
 
 </div>
